Updated UI/UXon tabletest.html

--- a/duothan-fe/tables.css
+++ b/duothan-fe/tables.css
@@ -22,7 +22,7 @@ body {
 
 
 .col-1,
-.col-9 {
+.col-9, .col-auto, .col-12 {
 background-color: #e6e6e6;
 margin: 0px;
 padding: 10px;
@@ -33,6 +33,8 @@ border: 1px solid black;
 background-color: #f2f2f2;
 margin: 20px;
 }
+
+
 
 
 
